--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ cycler==0.12.1
 filelock==3.20.0
 fonttools==4.60.1
 fsspec==2025.9.0
+gmpy2==2.1.5
 Jinja2==3.1.6
 kiwisolver==1.4.9
 MarkupSafe==3.0.3
@@ -28,3 +29,6 @@ torchvision==0.17.2
 tqdm==4.67.1
 typing_extensions==4.15.0
 tzdata==2025.2
+
+# external
+sparse_smoothing @ git+https://github.com/abojchevski/sparse_smoothing@master
